# deeperinsights

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pattern_matcher.py  pyproject.toml
content_formatter/: textfile_formatter.py
contentformatter/: __init__.py
file_parser/: __init__.py  textfile_parser.py
fileparser/: __init__.py  textfileparser.py
solution/: __init__.py  main.py  pattern_matcher.py
solution/content_formatter/: __init__.py  textfile_formatter.py
solution/file_parser/: __init__.py  textfile_parser.py
solution/utils/: configure_logger.py
tests/: test_content_formatter.py  test_fileparser.py  test_integration_solution.py  test_pattern_matcher.py  test_solution.py  test_text_file_parser.py
utils/: __init__.py  configure_logger.py
