[tool.poetry]
name = "solution"
version = "0.1.0"
description = "solution for deeperinsights assignment"
authors = ["Renjith <renjithbaby23@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
